@@ -1,3 +1,11 @@
+                        CHANGES IN VERSION 5.21l
+                 (Klaus Reimer <k@ailis.de>, 13 Mar 2005)
+                        
+Fixed warnings because missing inclusion of string.h and fixed a gcc-4.0
+problem with marc.c (Missing declaration of makefnam).
+
+
+
                         CHANGES IN VERSION 5.21k
                  (Klaus Reimer <k@ailis.de>, 6 Nov 2004)
                         
